--- a/styles/partials/page-landing.css
+++ b/styles/partials/page-landing.css
@@ -1,22 +1,13 @@
-:root {
-    font-size: 40%;
-}
-
 #page-landing {
-    background: var(--color-primary);
+    background-color: var(--color-primary);
 }
 
 #page-landing #container {
-    color: var(--color-text-in-primary);
+    color: var(--color-text-in-primary)
 }
 
 .logo-container img {
     height: 10rem;
-}
-
-.logo-container {
-    text-align: center;
-    margin-bottom: 3.2rem;
 }
 
 .logo-container h2 {
@@ -24,6 +15,11 @@
     font-size: 3.6rem;
     line-height: 4.6rem;
     margin-top: 0.8rem;
+}
+
+.logo-container {
+    text-align: center;
+    margin: 3.2rem;
 }
 
 .hero-image {
@@ -39,16 +35,15 @@
 .buttons-container a {
     width: 30rem;
     height: 10.4rem;
-    background-color: brown;
     border-radius: 0.8rem;
+    color: var(--color-button-text);
     margin-right: 1.6rem;
     font: 700 2.4rem Archivo;
     display: flex;
     align-items: center;
     justify-content: center;
     text-decoration: none;
-    transition: background 1s;
-    color: var(--color-button-text);
+    transition: background .2s;
 }
 
 .buttons-container a img {
@@ -71,4 +66,59 @@
 
 .buttons-container a.give-classes:hover {
     background: var(--color-secondary-dark);
+}
+
+.total-connections {
+    font-size: 1.8rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.total-connections img {
+    margin: 0.8rem;
+}
+
+@media(max-width:699px) {
+    :root {
+        font-size: 40%;
+    }
+}
+
+@media (min-width: 1100px) {
+    #page-landing #container {
+        max-width: 1100px;
+        display: grid;
+        grid-template-columns: 2fr 1fr 2fr;
+        grid-template-rows: 350px 1fr;
+        grid-template-areas: "proffy image image""button button texting";
+        gap: 60px;
+    }
+
+    .logo-container {
+        grid-area: proffy;
+        text-align: initial;
+        align-self: center;
+        margin: 0;
+    }
+
+    .logo-container img {
+        height: 127px;
+    }
+
+    .hero-image {
+        grid-area: image;
+    }
+
+    .buttons-container {
+        grid-area: button;
+        justify-content: flex-start;
+        margin: 0;
+    }
+
+    .total-connections {
+        grid-area: texting;
+        justify-self: end;
+        font-size: 15px;
+    }
 }
